issue with text overflow cutoff

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,22 +1,28 @@
-.card {
-  max-width: 413px;
+.card__image {
+  height: 413px;
   width: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .card__title {
-}
-
-.card__image {
-  height: 413px;
-  width: 413px;
-  object-fit: cover;
-  display: block;
+  margin: 0;
+  font-weight: 500;
+  font-style: medium;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0;
+  max-width: 353px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 12px 0 0;
 }
 
 .card__like-btn {
@@ -26,4 +32,17 @@
   border: none;
   background-color: transparent;
   opacity: 0.4;
+}
+
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
+
+  .card__title {
+    margin: 12px 0 20px;
+  }
+
+  .card__content {
+  }
 }
