--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,14 +1,13 @@
 .footer {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  padding: 60px 668px;
-  margin: 0;
-  max-width: 104px;
-  line-height: 16px;
+  padding: 60px 0;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .footer__copyright {
-  display: flex;
   margin: 0;
+  line-height: 16px;
 }
